--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
   </header>
 
   <nav class="nav-tabs">
-    <button onclick="switchTab('home')">🏠 Home</button>
-    <button onclick="switchTab('track')">📈 Track</button>
-    <button onclick="switchTab('rewards')">🎁 Rewards</button>
-    <button onclick="switchTab('profile')">👤 Profile</button>
-  </nav>
+  <button onclick="switchTab('home')">🏠 Home</button>
+  <button onclick="switchTab('track')">📊 Track</button>
+  <button onclick="switchTab('rewards')">🎁 Rewards</button>
+  <button onclick="switchTab('leaderboard')">🏆 Leaderboard</button>
+  <button onclick="switchTab('profile')">👤 Profile</button>
+</nav>
+
 
   <main>
    <section id="home" class="tab active">
