--- a/index.html
+++ b/index.html
@@ -33,34 +33,34 @@
 
   <main>
    <section id="home" class="tab active">
-  <div class="hero">
-    <h1>WarpAI</h1>
-    <p class="subtitle">Track your onchain journey in real time</p>
-  </div>
+  <div class="mini-container">
+    <div class="hero-header">
+      <h1>WarpAi</h1>
+      <p class="sub">Track your onchain journey in real time</p>
+    </div>
 
-  <div class="card-grid">
-    <div class="card green">
+    <div class="card small green">
       <h3>Claim XP</h3>
       <p>Daily XP bonus</p>
       <button>Claim</button>
     </div>
 
-    <div class="card dark">
+    <div class="card small dark">
       <h3>Buy Token</h3>
       <p>Pre-launch $WARP</p>
       <button>Buy Now</button>
     </div>
-  </div>
 
-  <div class="card full">
-    <h3>Your Reward Level</h3>
-    <p>🔥 87 XP • 5-day streak</p>
-  </div>
+    <div class="card small">
+      <h3>Your Reward Level</h3>
+      <p>🔥 87 XP • 5-day streak</p>
+    </div>
 
-  <div class="card full premium">
-    <h3>💎 Premium Tools</h3>
-    <button>Claim another address</button>
-    <button>Track random wallet</button>
+    <div class="card full premium">
+      <h3>💎 Premium Tools</h3>
+      <button>Claim another address</button>
+      <button>Track random wallet</button>
+    </div>
   </div>
 </section>
   </main>
