--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@
 <body>
   <header class="app-header">
   <div class="logo-title">
-    <img src="logo.png" alt="WarpAi Logo" class="logo-icon" />
-    <div class="text-wrap">
-      <h1 class="brand-name">WarpAi</h1>
-      <p class="tracker-sub">Onchain Activity Tracker</p>
-    </div>
+    <img src="logo-icon.png" alt="WarpAi Logo" class="logo-icon-fixed" />
   </div>
   <div class="wallet-ui">
     <span id="xpDisplay">0 XP 🔥</span>
