--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 <body>
   <header class="app-header">
   <div class="logo-title">
-    <img src="logo-icon.png" alt="WarpAi Logo" class="logo-icon-fixed" />
+    <img src="logo.png" alt="WarpAi Logo" class="logo-icon-fixed" />
   </div>
   <div class="wallet-ui">
     <span id="xpDisplay">0 XP 🔥</span>
     <button id="connectWallet">Connect Wallet</button>
   </div>
 </header>
+
 
   <nav class="nav-tabs">
     <button class="tab-button active">🏠 Home</button>
