--- a/index.html
+++ b/index.html
@@ -102,6 +102,48 @@
         </div>
       </div>
     </section>
+    <!-- REWARDS TAB -->
+<section class="tab-content" style="display:none;">
+  <div class="hero">
+    <h2>🎁 Rewards & XP</h2>
+    <p class="subtitle">Boost your journey and earn daily perks</p>
+  </div>
+
+  <div class="card-grid">
+    <div class="card green">
+      <h3>Current XP</h3>
+      <p>🔥 87 XP</p>
+      <p>5-day streak</p>
+    </div>
+
+    <div class="card dark">
+      <h3>Claim Bonus</h3>
+      <p>+10 XP for daily visit</p>
+      <button>Claim Now</button>
+    </div>
+
+    <div class="card dark">
+      <h3>Rewards Level</h3>
+      <p>Level 2</p>
+      <p>Next: 100 XP</p>
+    </div>
+
+    <div class="card dark">
+      <h3>Invite Friends</h3>
+      <p>Earn +15 XP per invite</p>
+      <button>Copy Referral Link</button>
+    </div>
+
+    <div class="card full premium">
+      <h3>💎 Premium Perks</h3>
+      <ul>
+        <li>Track more wallets</li>
+        <li>Priority support</li>
+        <li>Early access features</li>
+      </ul>
+    </div>
+  </div>
+</section>
   </main>
 
   <script src="app.js"></script>
