--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
     <section class="tab-content" style="display:none;">
       <div class="hero">
         <h2>📊 Onchain Tracker</h2>
-        <p class="subtitle">Följ din aktivitet på kedjan – allt i realtid</p>
+        <p class="subtitle">Follow your Activity OnChain - Live!</p>
       </div>
 
       <div class="card-grid">
         <div class="card blue">
           <h3>Latest Activity</h3>
-          <p>Exempelvis: Köpte token på Zora</p>
-          <small>+ $5.23 i vinst</small>
+          <p>Ex Bought Token on Zora</p>
+          <small>+ $5.23 Win</small>
         </div>
 
         <div class="card dark">
