--- a/index.html
+++ b/index.html
@@ -101,6 +101,28 @@
           <p>Du har spenderat 23% mindre gas än genomsnittet.</p>
         </div>
       </div>
+      <!-- LEADERBOARD TAB -->
+<section class="tab-content" style="display:none;">
+  <div class="hero">
+    <h2>🏆 Leaderboard</h2>
+    <p class="subtitle">Top users ranked by XP</p>
+  </div>
+
+  <div class="card full">
+    <ol class="leaderboard">
+      <li><span>👑 0xAlpha123</span><strong>142 XP</strong></li>
+      <li><span>0xZoraMint</span><strong>127 XP</strong></li>
+      <li><span>0xGweiGod</span><strong>121 XP</strong></li>
+      <li><span>0xTokenSniper</span><strong>114 XP</strong></li>
+      <li><span>0xMintMaster</span><strong>108 XP</strong></li>
+      <li><span>0xWarped</span><strong>101 XP</strong></li>
+      <li><span>0xEtherWolf</span><strong>99 XP</strong></li>
+      <li><span>0xBaseChad</span><strong>95 XP</strong></li>
+      <li><span>0xXPGrindr</span><strong>92 XP</strong></li>
+      <li><span>0xYou 👈</span><strong>87 XP</strong></li>
+    </ol>
+  </div>
+</section>
     </section>
     <!-- REWARDS TAB -->
 <section class="tab-content" style="display:none;">
