--- a/index.html
+++ b/index.html
@@ -54,54 +54,56 @@
     </section>
 
     <!-- TRACK -->
-    <section class="tab-content" style="display:none;">
-      <div class="hero">
-        <h2>📊 Onchain Tracker</h2>
-        <p class="subtitle">Follow your Activity OnChain - Live!</p>
-      </div>
+<section class="tab-content" style="display:none;">
+  <div class="hero">
+    <h2>📊 Onchain Tracker</h2>
+    <p class="subtitle">Follow your Activity OnChain - Live!</p>
+  </div>
 
-      <div class="card-grid">
-        <div class="card blue">
-          <h3>Latest Activity</h3>
-          <p>Ex Bought Token on Zora</p>
-          <small>+ $5.23 Win</small>
-        </div>
+  <div class="card-grid">
+    <div class="card blue">
+      <h3>Latest Activity</h3>
+      <p>Ex Bought Token on Zora</p>
+      <small>+ $5.23 Win</small>
+    </div>
 
-        <div class="card dark">
-          <h3>Gas Spent</h3>
-          <p>0.14 ETH (~$42)</p>
-        </div>
+    <div class="card dark">
+      <h3>Gas Spent</h3>
+      <p>0.14 ETH (~$42)</p>
+    </div>
 
-        <div class="card dark">
-          <h3>Tokens Minted</h3>
-          <p>23 st</p>
-        </div>
+    <div class="card dark">
+      <h3>Tokens Minted</h3>
+      <p>23 st</p>
+    </div>
 
-        <div class="card dark">
-          <h3>Trades: Win/Loss</h3>
-          <p>17 / 6</p>
-        </div>
+    <div class="card dark">
+      <h3>Trades: Win/Loss</h3>
+      <p>17 / 6</p>
+    </div>
 
-        <div class="card dark">
-          <h3>ETH Moved</h3>
-          <p>1.65 ETH total</p>
-        </div>
+    <div class="card dark">
+      <h3>ETH Moved</h3>
+      <p>1.65 ETH total</p>
+    </div>
 
-        <div class="card dark">
-          <h3>Connected dApps</h3>
-          <ul>
-            <li>Zora</li>
-            <li>OpenSea</li>
-            <li>Base</li>
-          </ul>
-        </div>
+    <div class="card dark">
+      <h3>Connected dApps</h3>
+      <ul>
+        <li>Zora</li>
+        <li>OpenSea</li>
+        <li>Base</li>
+      </ul>
+    </div>
 
-        <div class="card full">
-          <h3>💡 Smart Insights</h3>
-          <p>Du har spenderat 23% mindre gas än genomsnittet.</p>
-        </div>
-      </div>
-      <!-- LEADERBOARD TAB -->
+    <div class="card full">
+      <h3>💡 Smart Insights</h3>
+      <p>You’ve spent 23% less gas than average.</p>
+    </div>
+  </div>
+</section>
+
+<!-- LEADERBOARD TAB -->
 <section class="tab-content" style="display:none;">
   <div class="hero">
     <h2>🏆 Leaderboard</h2>
@@ -123,7 +125,7 @@
     </ol>
   </div>
 </section>
-    </section>
+    
     <!-- REWARDS TAB -->
 <section class="tab-content" style="display:none;">
   <div class="hero">
