--- a/index.html
+++ b/index.html
@@ -167,6 +167,49 @@
     </ol>
   </div>
 </section>
+    <!-- PROFILE TAB -->
+<section class="tab-content" style="display:none;">
+  <div class="hero">
+    <h2>👤 My Profile</h2>
+    <p class="subtitle">Account overview & referral bonuses</p>
+  </div>
+
+  <div class="card-grid">
+    <div class="card dark">
+      <h3>Wallet</h3>
+      <p>0x1234...ABCD</p>
+      <p>Total XP: <strong>87</strong></p>
+    </div>
+
+    <div class="card dark">
+      <h3>WarpAi Token</h3>
+      <p>Balance: 342.50 WAI</p>
+      <p>Level Bonus: 10%</p>
+    </div>
+
+    <div class="card dark">
+      <h3>Claim Token</h3>
+      <p>Reward: 5 WAI</p>
+      <button>Claim</button>
+    </div>
+
+    <div class="card dark">
+      <h3>Share Link</h3>
+      <p>Earn 5 WAI per share</p>
+      <button>Share on Farcaster</button>
+      <button>Share on X</button>
+    </div>
+
+    <div class="card full premium">
+      <h3>📦 Claim History</h3>
+      <ul>
+        <li>+5 WAI – shared on X</li>
+        <li>+5 WAI – referred friend</li>
+        <li>+10 WAI – weekly login</li>
+      </ul>
+    </div>
+  </div>
+</section>
   </main>
 
   <script src="app.js"></script>
