--- a/index.html
+++ b/index.html
@@ -210,6 +210,19 @@
     </div>
   </div>
 </section>
+    <!-- PREMIUM SECTION -->
+<div class="card full premium">
+  <h3>💎 Unlock Premium</h3>
+  <p>One-time $5 unlock all advanced tools:</p>
+  <ul>
+    <li>🔓 Claim multiple wallets</li>
+    <li>🕵️‍♂️ Track any public wallet</li>
+    <li>📊 See full gas/mint/trade summary</li>
+    <li>💰 Earn 2x WAI rewards</li>
+  </ul>
+  <button>Upgrade to Premium</button>
+</div>
+
   </main>
 
   <script src="app.js"></script>
