--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
       <span id="xpDisplay">0 XP 🔥</span>
       <button id="connectWallet">Connect Wallet</button>
     </div>
+    <!-- Settings Icon & Dropdown -->
+<div class="settings-wrapper">
+  <button id="settingsBtn" class="settings-icon">⚙️</button>
+  <div id="settingsMenu" class="settings-dropdown">
+    <label><input type="checkbox" id="toggleTheme" /> Dark Mode</label>
+    <hr />
+    <button>🔔 Notifications</button>
+    <button>🌐 Language: English</button>
+    <button>📲 Device Settings</button>
+    <button>🚪 Logout</button>
+  </div>
+</div>
   </header>
 
   <nav class="nav-tabs">
