--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   </div>
 </section>
     
-        <!-- REWARDS TAB -->
+       <!-- REWARDS TAB -->
 <section class="tab-content" style="display:none;">
   <div class="hero">
     <h2>🎁 Rewards & XP</h2>
@@ -155,8 +155,21 @@
         <li>Early access features</li>
       </ul>
     </div>
+
+    <div class="card full upgrade">
+      <h3>🔓 Unlock Premium</h3>
+      <p>One-time $5 unlock all advanced tools:</p>
+      <ul>
+        <li>📍 Claim multiple wallets</li>
+        <li>🔍 Track any public wallet</li>
+        <li>📊 See full gas/mint/trade summary</li>
+        <li>🎉 Earn 2x WAI rewards</li>
+      </ul>
+      <button class="upgrade-button">Upgrade to Premium</button>
+    </div>
   </div>
 </section>
+
     <!-- LEADERBOARD TAB -->
 <section class="tab-content" style="display:none;">
   <div class="hero">
