--- a/index.html
+++ b/index.html
@@ -155,19 +155,20 @@
         <li>Early access features</li>
       </ul>
     </div>
+    <!-- PREMIUM SECTION -->
+<div class="card full premium highlighted-premium">
+  <h3>🔓 Unlock Premium</h3>
+  <p>One-time $5 unlock all advanced tools:</p>
+  <ul>
+    <li>🔁 Claim multiple wallets</li>
+    <li>🧾 Track any public wallet</li>
+    <li>📊 See full gas/mint/trade summary</li>
+    <li>💰 Earn 2x WAI rewards</li>
+  </ul>
+  <button class="upgrade-button-green">Upgrade to Premium</button>
+</div>
 
-    <div class="card full upgrade">
-      <h3>🔓 Unlock Premium</h3>
-      <p>One-time $5 unlock all advanced tools:</p>
-      <ul>
-        <li>📍 Claim multiple wallets</li>
-        <li>🔍 Track any public wallet</li>
-        <li>📊 See full gas/mint/trade summary</li>
-        <li>🎉 Earn 2x WAI rewards</li>
-      </ul>
-      <button class="upgrade-button">Upgrade to Premium</button>
-    </div>
-  </div>
+    
 </section>
 
     <!-- LEADERBOARD TAB -->
