--- a/index.html
+++ b/index.html
@@ -14,19 +14,18 @@
     <div class="wallet-ui">
       <span id="xpDisplay">0 XP 🔥</span>
       <button id="connectWallet">Connect Wallet</button>
+      <div class="settings-wrapper">
+        <button id="settingsBtn" class="settings-icon">⚙️</button>
+        <div id="settingsMenu" class="settings-dropdown">
+          <label><input type="checkbox" id="toggleTheme" /> Dark Mode</label>
+          <hr />
+          <button>🔔 Notifications</button>
+          <button>🌐 Language: English</button>
+          <button>📲 Device Settings</button>
+          <button>🚪 Logout</button>
+        </div>
+      </div>
     </div>
-    <!-- Settings Icon & Dropdown -->
-<div class="settings-wrapper">
-  <button id="settingsBtn" class="settings-icon">⚙️</button>
-  <div id="settingsMenu" class="settings-dropdown">
-    <label><input type="checkbox" id="toggleTheme" /> Dark Mode</label>
-    <hr />
-    <button>🔔 Notifications</button>
-    <button>🌐 Language: English</button>
-    <button>📲 Device Settings</button>
-    <button>🚪 Logout</button>
-  </div>
-</div>
   </header>
 
   <nav class="nav-tabs">
@@ -66,177 +65,97 @@
     </section>
 
     <!-- TRACK -->
-<section class="tab-content" style="display:none;">
-  <div class="hero">
-    <h2>📊 Onchain Tracker</h2>
-    <p class="subtitle">Follow your Activity OnChain - Live!</p>
-  </div>
+    <section class="tab-content" style="display:none;">
+      <div class="hero">
+        <h2>📊 Onchain Tracker</h2>
+        <p class="subtitle">Follow your Activity OnChain - Live!</p>
+      </div>
+      <div class="card-grid">
+        <div class="card blue">
+          <h3>Latest Activity</h3>
+          <p>Ex Bought Token on Zora</p>
+          <small>+ $5.23 Win</small>
+        </div>
+        <div class="card dark">
+          <h3>Gas Spent</h3>
+          <p>0.14 ETH (~$42)</p>
+        </div>
+        <div class="card dark">
+          <h3>Tokens Minted</h3>
+          <p>23 st</p>
+        </div>
+        <div class="card dark">
+          <h3>Trades: Win/Loss</h3>
+          <p>17 / 6</p>
+        </div>
+        <div class="card dark">
+          <h3>ETH Moved</h3>
+          <p>1.65 ETH total</p>
+        </div>
+        <div class="card dark">
+          <h3>Connected dApps</h3>
+          <ul>
+            <li>Zora</li>
+            <li>OpenSea</li>
+            <li>Base</li>
+          </ul>
+        </div>
+        <div class="card full">
+          <h3>💡 Smart Insights</h3>
+          <p>You’ve spent 23% less gas than average.</p>
+        </div>
+      </div>
+    </section>
 
-  <div class="card-grid">
-    <div class="card blue">
-      <h3>Latest Activity</h3>
-      <p>Ex Bought Token on Zora</p>
-      <small>+ $5.23 Win</small>
-    </div>
-
-    <div class="card dark">
-      <h3>Gas Spent</h3>
-      <p>0.14 ETH (~$42)</p>
-    </div>
-
-    <div class="card dark">
-      <h3>Tokens Minted</h3>
-      <p>23 st</p>
-    </div>
-
-    <div class="card dark">
-      <h3>Trades: Win/Loss</h3>
-      <p>17 / 6</p>
-    </div>
-
-    <div class="card dark">
-      <h3>ETH Moved</h3>
-      <p>1.65 ETH total</p>
-    </div>
-
-    <div class="card dark">
-      <h3>Connected dApps</h3>
-      <ul>
-        <li>Zora</li>
-        <li>OpenSea</li>
-        <li>Base</li>
-      </ul>
-    </div>
-
-    <div class="card full">
-      <h3>💡 Smart Insights</h3>
-      <p>You’ve spent 23% less gas than average.</p>
-    </div>
-  </div>
-</section>
-    
-       <!-- REWARDS TAB -->
-<section class="tab-content" style="display:none;">
-  <div class="hero">
-    <h2>🎁 Rewards & XP</h2>
-    <p class="subtitle">Boost your journey and earn daily perks</p>
-  </div>
-
-  <div class="card-grid">
-    <div class="card green">
-      <h3>Current XP</h3>
-      <p>🔥 87 XP</p>
-      <p>5-day streak</p>
-    </div>
-
-    <div class="card dark">
-      <h3>Claim Bonus</h3>
-      <p>+10 XP for daily visit</p>
-      <button>Claim Now</button>
-    </div>
-
-    <div class="card dark">
-      <h3>Rewards Level</h3>
-      <p>Level 2</p>
-      <p>Next: 100 XP</p>
-    </div>
-
-    <div class="card dark">
-      <h3>Invite Friends</h3>
-      <p>Earn +15 XP per invite</p>
-      <button>Copy Referral Link</button>
-    </div>
-
-    <div class="card full premium">
-      <h3>💎 Premium Perks</h3>
-      <ul>
-        <li>Track more wallets</li>
-        <li>Priority support</li>
-        <li>Early access features</li>
-      </ul>
-    </div>
-    <!-- PREMIUM SECTION -->
-<div class="card full premium highlighted-premium">
-  <h3>🔓 Unlock Premium</h3>
-  <p>One-time $5 unlock all advanced tools:</p>
-  <ul>
-    <li>🔁 Claim multiple wallets</li>
-    <li>🧾 Track any public wallet</li>
-    <li>📊 See full gas/mint/trade summary</li>
-    <li>💰 Earn 2x WAI rewards</li>
-  </ul>
-  <button class="upgrade-button-green">Upgrade to Premium</button>
-</div>
-
-    
-</section>
-
-    <!-- LEADERBOARD TAB -->
-<section class="tab-content" style="display:none;">
-  <div class="hero">
-    <h2>🏆 Leaderboard</h2>
-    <p class="subtitle">Top users ranked by XP</p>
-  </div>
-
-  <div class="card full">
-    <ol class="leaderboard">
-      <li><span>👑 0xAlpha123</span><strong>142 XP</strong></li>
-      <li><span>0xZoraMint</span><strong>127 XP</strong></li>
-      <li><span>0xGweiGod</span><strong>121 XP</strong></li>
-      <li><span>0xTokenSniper</span><strong>114 XP</strong></li>
-      <li><span>0xMintMaster</span><strong>108 XP</strong></li>
-      <li><span>0xWarped</span><strong>101 XP</strong></li>
-      <li><span>0xEtherWolf</span><strong>99 XP</strong></li>
-      <li><span>0xBaseChad</span><strong>95 XP</strong></li>
-      <li><span>0xXPGrindr</span><strong>92 XP</strong></li>
-      <li><span>0xYou 👈</span><strong>87 XP</strong></li>
-    </ol>
-  </div>
-</section>
-    <!-- PROFILE TAB -->
-<section class="tab-content" style="display:none;">
-  <div class="hero">
-    <h2>👤 My Profile</h2>
-    <p class="subtitle">Account overview & referral bonuses</p>
-  </div>
-
-  <div class="card-grid">
-    <div class="card dark">
-      <h3>Wallet</h3>
-      <p>0x1234...ABCD</p>
-      <p>Total XP: <strong>87</strong></p>
-    </div>
-
-    <div class="card dark">
-      <h3>WarpAi Token</h3>
-      <p>Balance: 342.50 WAI</p>
-      <p>Level Bonus: 10%</p>
-    </div>
-
-    <div class="card dark">
-      <h3>Claim Token</h3>
-      <p>Reward: 5 WAI</p>
-      <button>Claim</button>
-    </div>
-
-    <div class="card dark">
-      <h3>Share Link</h3>
-      <p>Earn 5 WAI per share</p>
-      <button>Share on Farcaster</button>
-      <button>Share on X</button>
-    </div>
-
-    <div class="card full premium">
-      <h3>📦 Claim History</h3>
-      <ul>
-        <li>+5 WAI – shared on X</li>
-        <li>+5 WAI – referred friend</li>
-        <li>+10 WAI – weekly login</li>
-      </ul>
-    </div>
-  </div>
-</section>
-    </main>
+    <!-- REWARDS -->
+    <section class="tab-content" style="display:none;">
+      <div class="hero">
+        <h2>🎁 Rewards & XP</h2>
+        <p class="subtitle">Boost your journey and earn daily perks</p>
+      </div>
+      <div class="card-grid">
+        <div class="card green">
+          <h3>Current XP</h3>
+          <p>🔥 87 XP</p>
+          <p>5-day streak</p>
+        </div>
+        <div class="card dark">
+          <h3>Claim Bonus</h3>
+          <p>+10 XP for daily visit</p>
+          <button>Claim Now</button>
+        </div>
+        <div class="card dark">
+          <h3>Rewards Level</h3>
+          <p>Level 2</p>
+          <p>Next: 100 XP</p>
+        </div>
+        <div class="card dark">
+          <h3>Invite Friends</h3>
+          <p>Earn +15 XP per invite</p>
+          <button>Copy Referral Link</button>
+        </div>
+        <div class="card full premium">
+          <h3>💎 Premium Perks</h3>
+          <ul>
+            <li>Track more wallets</li>
+            <li>Priority support</li>
+            <li>Early access features</li>
+          </ul>
+        </div>
+        <div class="card full premium highlighted-premium">
+          <h3>🔓 Unlock Premium</h3>
+          <p>One-time $5 unlock all advanced tools:</p>
+          <ul>
+            <li>🔁 Claim multiple wallets</li>
+            <li>🧾 Track any public wallet</li>
+            <li>📊 See full gas/mint/trade summary</li>
+            <li>💰 Earn 2x WAI rewards</li>
+          </ul>
+          <button class="upgrade-button-green">Upgrade to Premium</button>
+        </div>
+      </div>
+    </section>
+  </main>
 
   <script src="app.js"></script>
 </body>
