--- a/index.html
+++ b/index.html
@@ -155,6 +155,70 @@
         </div>
       </div>
     </section>
+    <!-- LEADERBOARD TAB -->
+<section class="tab-content" style="display:none;">
+  <div class="hero">
+    <h2>🏆 Leaderboard</h2>
+    <p class="subtitle">Top users ranked by XP</p>
+  </div>
+
+  <div class="card full">
+    <ol class="leaderboard">
+      <li><span>👑 0xAlpha123</span><strong>142 XP</strong></li>
+      <li><span>0xZoraMint</span><strong>127 XP</strong></li>
+      <li><span>0xGweiGod</span><strong>121 XP</strong></li>
+      <li><span>0xTokenSniper</span><strong>114 XP</strong></li>
+      <li><span>0xMintMaster</span><strong>108 XP</strong></li>
+      <li><span>0xWarped</span><strong>101 XP</strong></li>
+      <li><span>0xEtherWolf</span><strong>99 XP</strong></li>
+      <li><span>0xBaseChad</span><strong>95 XP</strong></li>
+      <li><span>0xXPGrindr</span><strong>92 XP</strong></li>
+      <li><span>0xYou 👈</span><strong>87 XP</strong></li>
+    </ol>
+  </div>
+</section>
+    <!-- PROFILE TAB -->
+<section class="tab-content" style="display:none;">
+  <div class="hero">
+    <h2>👤 My Profile</h2>
+    <p class="subtitle">Account overview & referral bonuses</p>
+  </div>
+
+  <div class="card-grid">
+    <div class="card dark">
+      <h3>Wallet</h3>
+      <p>0x1234...ABCD</p>
+      <p>Total XP: <strong>87</strong></p>
+    </div>
+
+    <div class="card dark">
+      <h3>WarpAi Token</h3>
+      <p>Balance: 342.50 WAI</p>
+      <p>Level Bonus: 10%</p>
+    </div>
+
+    <div class="card dark">
+      <h3>Claim Token</h3>
+      <p>Reward: 5 WAI</p>
+      <button>Claim</button>
+    </div>
+
+    <div class="card dark">
+      <h3>Share Link</h3>
+      <p>Earn 5 WAI per share</p>
+      <button>Share on Farcaster</button>
+      <button>Share on X</button>
+    </div>
+
+    <div class="card full premium">
+      <h3>📦 Claim History</h3>
+      <ul>
+        <li>+5 WAI – shared on X</li>
+        <li>+5 WAI – referred friend</li>
+        <li>+10 WAI – weekly login</li>
+      </ul>
+    </div>
+  </div>
   </main>
 
   <script src="app.js"></script>
