--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <div id="onboardingOverlay">
+  <div class="onboarding-content">
+    <img src="logo.png" alt="Logo" />
+    <h1>WarpAi</h1>
+    <p>Onchain Activity Tracker</p>
+  </div>
+</div>
   <header class="app-header">
     <div class="logo-title">
       <img src="logo.png" alt="WarpAi Logo" class="logo-icon-fixed" />
