--- a/index.html
+++ b/index.html
@@ -140,7 +140,13 @@
           <h3>Invite Friends</h3>
           <p>Earn +15 XP per invite</p>
           <button>Copy Referral Link</button>
-        </div>
+        </div><div class="card full earn">
+  <h3>🚀 Earn More WAI</h3>
+  <p>Share the app and invite friends to earn WarpAi Tokens.</p>
+  <button onclick="copyReferral()">Copy Referral Link</button>
+  <button onclick="shareOnX()">Share on X</button>
+  <button onclick="shareOnFarcaster()">Share on Farcaster</button>
+</div>
         <div class="card full premium">
           <h3>💎 Premium Perks</h3>
           <ul>
