--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <!-- Onboarding Screen -->
+<div id="onboardingOverlay" class="fade-in-logo">
+  <div class="onboarding-content">
+    <img src="logo.png" alt="WarpAi Logo" />
+  </div>
+</div>
   <div id="onboardingOverlay">
   <div class="onboarding-content">
     <img src="logo.png" alt="Logo" />
