--- a/index.html
+++ b/index.html
@@ -8,18 +8,12 @@
 </head>
 <body>
   <!-- Onboarding Screen -->
-<div id="onboardingOverlay" class="fade-in-logo">
-  <div class="onboarding-content">
-    <img src="logo.png" alt="WarpAi Logo" />
+  <div id="onboardingOverlay" class="fade-in-logo">
+    <div class="onboarding-content">
+      <img src="logo.png" alt="WarpAi Logo" />
+    </div>
   </div>
-</div>
-  <div id="onboardingOverlay">
-  <div class="onboarding-content">
-    <img src="logo.png" alt="Logo" />
-    <h1></h1>
-    <p></p>
-  </div>
-</div>
+
   <header class="app-header">
     <div class="logo-title">
       <img src="logo.png" alt="WarpAi Logo" class="logo-icon-fixed" />
@@ -146,13 +140,14 @@
           <h3>Invite Friends</h3>
           <p>Earn +15 XP per invite</p>
           <button>Copy Referral Link</button>
-        </div><div class="card full earn">
-  <h3>🚀 Earn More WAI</h3>
-  <p>Share the app and invite friends to earn WarpAi Tokens.</p>
-  <button onclick="copyReferral()">Copy Referral Link</button>
-  <button onclick="shareOnX()">Share on X</button>
-  <button onclick="shareOnFarcaster()">Share on Farcaster</button>
-</div>
+        </div>
+        <div class="card full earn">
+          <h3>🚀 Earn More WAI</h3>
+          <p>Share the app and invite friends to earn WarpAi Tokens.</p>
+          <button onclick="copyReferral()">Copy Referral Link</button>
+          <button onclick="shareOnX()">Share on X</button>
+          <button onclick="shareOnFarcaster()">Share on Farcaster</button>
+        </div>
         <div class="card full premium">
           <h3>💎 Premium Perks</h3>
           <ul>
