--- a/index.html
+++ b/index.html
@@ -67,6 +67,14 @@
             <button>Claim another address</button>
             <button>Track random wallet</button>
           </div>
+          <div class="card full journey">
+  <h3>🎯 Your XP Journey</h3>
+  <p>Level 2 → Next Level: 100 XP</p>
+  <div class="xp-bar">
+    <div class="xp-fill" style="width: 87%;"></div>
+  </div>
+  <small>87 / 100 XP</small>
+</div>
         </div>
       </div>
     </section>
